# engine

./: .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  readme 2.md  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
assets/private/: README.md
cmake/: IonConfig.cmake.in  IonExportHeader.cmake  IonHelpers.cmake  OxideConfig.cmake.in  OxideExportHeader.cmake  OxideHelpers.cmake
docs/: CLA.docx  CPP_MANUAL_SHORT.md  README.md  game-document.md  mvp.md
docs/api/: README.md
docs/contributing/: README.md  ai-policy.md  code-review.md  git-workflow.md
docs/development/: README.md  build-system.md  cpp-manual-short.md  cpp-manual.md  creating-apps.md  creating-libraries.md  testing.md
docs/game-design/: README.md  game-mechanics.md  mvp-requirements.md  network-architecture.md  ships-equipment.md
docs/getting-started/: README.md  building.md  first-app.md  prerequisites.md
docs/legal/: CLA.md  README.md
libs/: CMakeLists.txt
libs/asset/: .gitkeep
libs/core/: CMakeLists.txt  README.md
libs/core/include/ion/: core.h
libs/core/include/ion/core/: buffer.h  error.h  store.h  types.h
libs/core/include/ion/core/buffer/: buffer_base.h  buffer_factory.h  i_buffer.h  static_buffer.h
libs/core/include/ion/core/error/: core_errc.h  error_impl.h  error_strings.h
libs/core/include/ion/core/lifecycle/: service.h
libs/core/include/ion/core/logging/: logger.h
libs/core/include/ion/core/metrics/: metrics.h
libs/core/include/ion/core/store/: i_store.h  i_transaction.h  store_base.h  store_handle.h  transaction_base.h
libs/core/include/ion/core/thread/: executor.h
libs/core/include/ion/core/time/: clock.h
libs/core/include/oxide/core/: buffer.h  error.h  store.h
libs/core/include/oxide/core/buffer/: buffer.h  buffer_factory.h  i_buffer.h  ibuffer.h  static_buffer.h
libs/core/include/oxide/core/config/: config_source.h
libs/core/include/oxide/core/error/: error.h  error_impl.h  error_strings.h
libs/core/include/oxide/core/lifecycle/: service.h
libs/core/include/oxide/core/logging/: logger.h
libs/core/include/oxide/core/metrics/: metrics.h
libs/core/include/oxide/core/store/: i_store.h  i_transaction.h  store_handle.h
libs/core/include/oxide/core/thread/: executor.h
libs/core/include/oxide/core/time/: clock.h  timer.h
libs/core/src/buffer/: buffer_factory.cpp  vector_buffer_impl.cpp  vector_buffer_impl.h
libs/core/src/error/: core_errc.cpp
libs/core/src/storage/: json_store_impl.cpp  json_store_impl.h  json_transaction_impl.cpp  json_transaction_impl.h  storage_factory.cpp  toml_store_impl.cpp  toml_store_impl.h  toml_transaction_impl.cpp  toml_transaction_impl.h
libs/core/tests/: CMakeLists.txt
libs/core/tests/basic-test/: CMakeLists.txt  test.cpp
libs/core/tests/buffer-test/: CMakeLists.txt  buffer-test.cpp
libs/core/tests/json-test/: CMakeLists.txt  json-test.cpp
libs/core/tests/storage-test/: CMakeLists.txt
libs/core/tests/toml-test/: CMakeLists.txt  toml-test.cpp
scripts/: bootstrap.ps1  bootstrap.sh  verify-setup.ps1  verify-setup.sh
vcpkg/triplets/: arm64-osx-oxide-lto.cmake  arm64-osx-static.cmake  x64-linux-oxide-lto.cmake  x64-windows-oxide-lto.cmake
